--- a/gtk/theme/HighContrast/gtk.css
+++ b/gtk/theme/HighContrast/gtk.css
@@ -2066,11 +2066,11 @@ GtkLevelBar.vertical {
     .level-bar.fill-block.empty-fill-block:backdrop {
       border-color: rgba(0, 0, 0, 0.15); }
 
-.view:selected, GtkCalendar:selected, .view:selected:focus, GtkCalendar:focus:selected, .view:selected:hover, GtkCalendar:hover:selected, .label:selected, .label:selected:focus, .label:selected:hover, .label:backdrop:selected, .entry:selected, .entry:selected:focus, .menuitem.button.flat:hover, .menuitem.button.flat:selected, .list-row:selected, .sidebar:selected, GtkPlacesSidebar.sidebar .view:selected, GtkPlacesSidebar.sidebar GtkCalendar:selected {
+.view:selected, GtkCalendar:selected, .view:selected:focus, GtkCalendar:focus:selected, .view:selected:hover, GtkCalendar:hover:selected, .label:selected, .label:selected:focus, .label:selected:hover, .label:backdrop:selected, .entry:selected, .entry:selected:focus, .menuitem.button.flat:hover, .menuitem.button.flat:selected, .list-row.activatable:selected, .sidebar:selected, GtkPlacesSidebar.sidebar .view:selected, GtkPlacesSidebar.sidebar GtkCalendar:selected {
   background-color: #000;
   color: #fff;
   outline-color: rgba(255, 255, 255, 0.3); }
-  .view:backdrop:selected, GtkCalendar:backdrop:selected, GtkCalendar:backdrop:focus:selected, GtkCalendar:backdrop:hover:selected, .label:backdrop:selected, .entry:backdrop:selected, .menuitem.button.flat:backdrop:hover, .menuitem.button.flat:backdrop:selected, .list-row:backdrop:selected, .sidebar:backdrop:selected, GtkPlacesSidebar.sidebar .view:backdrop:selected, GtkPlacesSidebar.sidebar GtkCalendar:backdrop:selected {
+  .view:backdrop:selected, GtkCalendar:backdrop:selected, GtkCalendar:backdrop:focus:selected, GtkCalendar:backdrop:hover:selected, .label:backdrop:selected, .entry:backdrop:selected, .menuitem.button.flat:backdrop:hover, .menuitem.button.flat:backdrop:selected, .list-row.activatable:backdrop:selected, .sidebar:backdrop:selected, GtkPlacesSidebar.sidebar .view:backdrop:selected, GtkPlacesSidebar.sidebar GtkCalendar:backdrop:selected {
     background-color: #7f7f7f;
     color: #fff; }
 
@@ -2128,106 +2128,30 @@ GtkPlacesSidebar.sidebar .view .separator:backdrop {
   box-shadow: none; }
 
 .list-row.activatable {
-  background-color: rgba(255, 255, 255, 0);
-  border-style: none;
-  border-radius: 0;
-  box-shadow: none; }
+  color: #000; }
   .list-row.activatable:hover {
     background-color: #f2f2f2; }
   .list-row.activatable:active {
     box-shadow: inset 0 2px 2px -2px rgba(0, 0, 0, 0.2); }
   .list-row.activatable:selected {
-    background-color: #000; }
+    background-color: #000;
+    color: #fff; }
     .list-row.activatable:selected:active {
       box-shadow: inset 0 2px 3px -1px rgba(0, 0, 0, 0.5); }
     .list-row.activatable:selected:hover {
       background-color: black; }
     .list-row.activatable:selected:backdrop {
       background-color: #7f7f7f; }
-
-.list-row:selected .button {
-  border-width: 2px;
-  border-style: solid;
-  color: #000;
-  background-image: none;
-  background-color: #fff;
-  border-color: #7f7f7f;
-  border-color: #000; }
-  .list-row:selected .button.flat {
-    border-width: 2px;
-    border-style: solid;
+    .list-row.activatable:selected .button.flat {
+      color: #fff; }
+      .list-row.activatable:selected .button.flat:hover {
+        color: #000; }
+      .list-row.activatable:selected .button.flat:active {
+        color: #fff; }
+.list-row .button.flat {
+  color: #000; }
+  .list-row .button.flat:active {
     color: #fff; }
-  .list-row:selected .button:hover {
-    border-width: 2px;
-    border-style: solid;
-    color: #000;
-    background-color: #fff;
-    border-color: #7f7f7f;
-    background-image: none;
-    border-color: #000; }
-  .list-row:selected .button:active, .list-row:selected .button:checked {
-    border-width: 2px;
-    border-style: solid;
-    background-image: none;
-    color: white;
-    background-color: black;
-    border-color: #7f7f7f;
-    border-color: #000; }
-  .list-row:selected .button:backdrop, .list-row:selected .button.flat:backdrop {
-    border-width: 2px;
-    border-style: solid;
-    color: #000;
-    background-color: #fff;
-    border-color: #8b8b8b;
-    background-image: none;
-    text-shadow: none;
-    icon-shadow: none;
-    border-color: #000; }
-    .list-row:selected .button:backdrop:active, .list-row:selected .button:backdrop:checked, .list-row:selected .button.flat:backdrop:active, .list-row:selected .button.flat:backdrop:checked {
-      border-width: 2px;
-      border-style: solid;
-      color: white;
-      background-color: #8b8b8b;
-      border-color: #8b8b8b;
-      background-image: none;
-      border-color: #000; }
-    .list-row:selected .button:backdrop:insensitive, .list-row:selected .button.flat:backdrop:insensitive {
-      border-width: 2px;
-      border-style: solid;
-      color: #7f7f7f;
-      background-color: white;
-      border-color: #8b8b8b;
-      background-image: none;
-      border-color: #000; }
-      .list-row:selected .button:backdrop:insensitive:active, .list-row:selected .button:backdrop:insensitive:checked, .list-row:selected .button.flat:backdrop:insensitive:active, .list-row:selected .button.flat:backdrop:insensitive:checked {
-        border-width: 2px;
-        border-style: solid;
-        color: #7f7f7f;
-        border-color: #8b8b8b;
-        background-image: none;
-        background-color: whitesmoke;
-        border-color: #000; }
-  .list-row:selected .button.flat:backdrop {
-    border-width: 2px;
-    border-style: solid;
-    color: #fff; }
-  .list-row:selected .button:insensitive {
-    border-width: 2px;
-    border-style: solid;
-    color: #7f7f7f;
-    background-color: white;
-    border-color: #7f7f7f;
-    background-image: none;
-    text-shadow: none;
-    icon-shadow: none;
-    border-color: #000; }
-    .list-row:selected .button:insensitive:active, .list-row:selected .button:insensitive:checked {
-      border-width: 2px;
-      border-style: solid;
-      color: #7f7f7f;
-      border-color: #7f7f7f;
-      background-image: none;
-      background-color: white; }
 
 .list-row, .list-row.activatable {
   transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
